--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,8 @@ jobs:
         with:
           go-version: '>=1.20'
           check-latest: true
+      - name: Install build dependencies
+        run: sudo apt-get update && sudo apt-get install bc gcc libgl1-mesa-dev libwayland-dev libx11-dev libxkbcommon-dev xorg-dev xvfb
       - name: Download dependencies
         run: go mod download
       - name: Run tests
